--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Basem Ali - Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -62,9 +62,6 @@
 
 <div class="d-flex flex-column flex-lg-row justify-content-center bg-primary py-5">
   <div class="col-12 col-md-4 d-flex justify-content-center d-flex align-items-center mx-auto">
-    <!-- <div class="col-1">
-    <i class="bi bi-brush" style="color: white;"></i>
-    </div> -->
     <div class="d-flex justify-content-center flex-column" style="color: white;">
       <h6>Current Position</h6>
       <h5>9-Month Program ITI Trainee</h5>
@@ -125,21 +122,6 @@
   </div>
   </div>
 </div>
-
-<!-- <div class="container p-5 d-flex justify-content-center flex-column gap-3">
-  <h2 class="">Latest Work</h2>
-  <div class="row d-flex justify-content-center gap-3">
-    <div class="card col-6 text-bg-dark">
-      <img src="portfolio\Ford.png" class="card-img" alt="...">
-      <div class="card-img-overlay d-flex justify-content-end flex-column p-4">
-        <h3 class="card-title" style="font-weight: bold;">Ford - Cars Shop</h3>
-        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit nulla inventore enim vitae aliquid in consequatur eaque quam.</p>
-        <p class="card-text" style="color: rgb(163, 163, 163)"><small>UI/UX Design</small></p>
-      </div>
-    </div>
-
-  </div>
-</div> -->
 
 <div class="container p-5 d-flex justify-content-center flex-column gap-3">
   <h2 class="">Latest Work</h2>
@@ -313,9 +295,9 @@
         </div>
       </div>
       <div class="d-flex justify-content-center d-flex align-items-center gap-3">
-        <i class="bi bi-behance" style="color: white;"></i>
-        <i class="bi bi-linkedin" style="color: white;"></i>
-        <i class="bi bi-github" style="color: white;"></i>
+        <a href="https://www.behance.net/basem1337" target="_blank"><i class="bi bi-behance"></i></a>
+        <a href="https://www.linkedin.com/in/basem-mo1337/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/Basem1337" target="_blank"><i class="bi bi-github"></i></a>
       </div>
     </div>
     <div class="col-md-6 col-12  d-flex justify-content-center align-items-center gap-4 flex-column">
@@ -334,8 +316,6 @@
 <div class="bg-primary">
   <h6 class="text-center m-0 p-1" style="font-size: min(1rem, 5vw);">Designed by Basem Mohamed© Using Bootstrap</h6>
 </div>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
